haproxy/letschat/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: haproxy-lb
spec:
  host: hostnamehere
  to:
    kind: Service
    name: haproxy-lb-service
    weight: 100
  port:
    targetPort: 8080
status:
  ingress: []
